assets/css/layout/one-col.styl
.one-col {
    .document-content {
        min-width: 300px
        min-height: 100%
        max-width: 600px

        & > section {
            padding: h(2)
        }

        & > section + section {
            border-top: 1px solid $blue-bg-dark
        }

        pre code {
            background: $blue-bg
        }
    }

    .anchor {
        float: left
    }

    &.with-nav {
        .document-content {
            margin-left: 248px
        }
    }
}

